--- a/index.html
+++ b/index.html
@@ -81,14 +81,14 @@
             <div claass="greeting__item--img">
               <img src="./assets/images/greeting/greeting.jpg" alt="" />
             </div>
-            <div class="greeting__item-body">
-              <div class="greeting__item-body--title">
+            <p class="greeting__item-body">
+              <p class="greeting__item-body--title">
                 私たちが提供できる価値
-              </div>
-              <div class="greeting__item-body--txt">
+              </p>
+              <p class="greeting__item-body--txt">
                 ここにはテキストが入りますここにはテキストが入りますここにはテキストが入りますここにはテキストが入ります
-              </div>
-            </div>
+              </p>
+            </p>
             <!-- greeting__item-body -->
           </div>
           <!-- greeting__item -->
@@ -208,13 +208,13 @@
               </div>
               <div class="news__item-body--description">
                 <div class="news__item-body--title-group">
-                  <div class="news__item-body--title">タイトルはこちら</div>
+                  <p class="news__item-body--title">タイトルはこちら</p>
                   <div class="news__date">2024.6.1</div>
                 </div>
-                <div class="news__item-body--txt">
+                <p class="news__item-body--txt">
                   テキストが入ります テキストが入ります テキストが入ります
                   テキストが入ります
-                </div>
+                </p>
               </div>
               <!-- news__item-body--description -->
             </div>
@@ -226,13 +226,13 @@
               </div>
               <div class="news__item-body--description">
                 <div class="news__item-body--title-group">
-                  <div class="news__item-body--title">タイトルはこちら</div>
+                  <p class="news__item-body--title">タイトルはこちら</p>
                   <div class="news__date">2024.6.1</div>
                 </div>
-                <div class="news__item-body--txt">
+                <p class="news__item-body--txt">
                   テキストが入ります テキストが入ります テキストが入ります
                   テキストが入ります テキストが入ります
-                </div>
+                </p>
               </div>
               <!-- news__item-body--description -->
             </div>
